working on the fourth row

--- a/DoorDash/style.css
+++ b/DoorDash/style.css
@@ -247,27 +247,26 @@ nav{
     border-radius: 20px;
 }
 
-
-/* .banner{
-    width: 100%;
-    background-color: rgb(254, 241, 238);
-    height: 650px;
-    z-index: -999;
-    position: absolute;
-    top:1500px;
-
+.fourthRow{
+    background-image: url('https://img.cdn4dd.com/cdn-cgi/image/fit=cover,format=auto,quality=60/https://cdn.doordash.com/managed/consumer/seo/home/landing_cta/grocery_desktop.png');
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    filter: brightness(50%); 
+    margin-top: 50px;
+  
 }
 
-
-
-
-@media screen and (max-width:1270){
-
-    .banner{
-        background-color: white;
-    }
-
-} */
+.fourthRowcontent{
+    position: absolute;
+    width: 50%;
+    text-align: center;
+    margin: auto;
+    left:30%;
+}
 
 
 @media screen and (max-width:770px) {
