--- a/DoorDash/style.css
+++ b/DoorDash/style.css
@@ -316,7 +316,57 @@ p {
     justify-content: center;
   }
 
+.fifthRow h1,p{
+  font-family: NotoSansPahawhHmong;
+  font-weight: 800;
+}
 
+.helping h1{
+  font-family: NotoSansPahawhHmong;
+  text-align: center;
+  font-weight: 800;
+
+}
+
+.sixthRow{
+  width: 70%;
+  margin: auto;
+  display: grid;
+  grid-gap: 15px;
+  justify-content: center;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
+}
+
+.sixthRow img{
+  width: 100%;
+  object-fit: cover;
+}
+
+.sixthRow h1{
+  font-family:NotoSansPahawhHmong ;
+  font-weight: 800;
+}
+
+.sixthRow p{
+  color: black;
+  font-family: NotoSansPahawhHmong;
+  font-weight: 100;
+  font-size: small;
+}
+
+.sixthRow button{
+  font-weight: 800;
+  margin-top: 10px;
+  letter-spacing: -0.04ch;
+  height: 40px;
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 0px 15px;
+  margin-right: 5px;
+  background-color: rgb(217, 20, 0);
+  border-radius: 20px;
+}
 
 @media screen and (max-width: 770px) {
   .logo h3 {
@@ -393,7 +443,15 @@ p {
     position: relative;
     top: -375px;
   }
+
+  .helping{
+    margin-top: 100px;
+  }
 }
+
+
+
+
 
 @media screen and (max-width: 1270px) {
   .partner {
