--- a/DoorDash/style.css
+++ b/DoorDash/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 @font-face {
@@ -332,7 +333,7 @@ p {
   width: 70%;
   margin: auto;
   display: grid;
-  grid-gap: 15px;
+  grid-gap: 35px;
   justify-content: center;
   grid-template-columns: 1fr 1fr;
   text-align: center;
@@ -367,6 +368,99 @@ p {
   background-color: rgb(217, 20, 0);
   border-radius: 20px;
 }
+
+.unlocking h1{
+  margin-top: 50px;
+  text-align: center;
+  font-family: NotoSansPahawhHmong;
+  font-weight: 800;
+  
+}
+
+.seventhRow{
+  width: 80%;
+  margin: 75px auto;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 1fr 1.2fr;
+  font-family: NotoSansPahawhHmong;
+}
+
+.seventhRow h2{
+  font-weight: 800;
+}
+
+.seventhRow div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.seventhRow img{
+  object-fit: cover;
+  width: 100%;
+}
+
+
+
+.seventhRow button{
+  font-weight: 800;
+  margin-top: 10px;
+  letter-spacing: -0.04ch;
+  height: 40px;
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 0px 15px;
+  margin-right: 5px;
+  background-color: rgb(217, 20, 0);
+  border-radius: 20px;
+}
+
+
+.eighthRow{
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 1.2fr 1fr;
+  width: 80%;
+  margin: auto;
+  font-family: NotoSansPahawhHmong;
+}
+
+.eighthRow h2{
+  font-weight: 800;
+}
+
+.eighthRow img{
+  width: 100%;
+  object-fit: cover;
+}
+
+.eighthRow button{
+  font-weight: 800;
+  margin-top: 10px;
+  letter-spacing: -0.04ch;
+  height: 40px;
+  color: rgb(255, 255, 255);
+  border: none;
+  padding: 0px 15px;
+  margin-right: 5px;
+  background-color: rgb(217, 20, 0);
+  border-radius: 20px;
+}
+
+.eighthRow div:nth-child(2)
+{
+  margin: auto;
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 10px;
+}
+
+
+
+
 
 @media screen and (max-width: 770px) {
   .logo h3 {
@@ -447,7 +541,65 @@ p {
   .helping{
     margin-top: 100px;
   }
+
+  .sixthRow button{
+    font-weight: 600;
+    font-size: 13px;
+  }
+
+  .sixthRow {
+   grid-template-columns: 1fr;
+   
+  }
+
+  .sixthRow img{
+    height: 150px;
+  }
+
+ 
+
+  .sixthRow div:nth-child(2){
+    display: none;
+  }
+
+  .sixthRow div:nth-child(3){
+    display: none;
+  }
+
+  .sixthRow div:nth-child(4){
+    display: none;
+  }
+
+ 
+  .seventhRow{
+  
+    width: 80%;
+    margin: 75px auto;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: 1fr;
+    position: relative;
+    top: 200px;
+  }
+
+  .seventhRow img {
+    height: 175px;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+    top: -350px;
+  }
+
+  .eighthRow{
+    grid-template-columns: 1fr;
+  }
+
+  .eighthRow img{
+    height: 175px;
+  }
+  
 }
+
 
 
 
