--- a/DoorDash/style.css
+++ b/DoorDash/style.css
@@ -482,6 +482,12 @@ p {
   font-family: NotoSansPahawhHmong;
   font-size: smaller;
 }
+
+.footer a:hover{
+  text-decoration: underline;
+  color: white;
+}
+
 .firstFoot{
   width: 80%;
   margin: auto;
@@ -553,13 +559,72 @@ svg{
   border-radius: 10px;
 }
 
+svg:hover{
+  background-color: grey;
+}
+
+
+.fourthFoot{
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+ 
+}
+
+.fourthOne{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.fourthOne a{
+  font-size: 10px;
+}
+
+.fourthFoot ul{
+  display: flex;
+  justify-content: space-around;
+}
+
+.fourthFoot ul li{
+  list-style-type: none;
+  color: rgb(141, 139, 139);
+  font-size: 20px;
+}
+
+@media screen and (max-width: 559px) {
+
+  .buttons button:nth-child(1) {
+    font-weight: 500;
+    margin-top: 10px;
+    font-size: 12px;
+    padding: 0px 25px;
+   
+ 
+  }
+  
+  .buttons button:nth-child(2) {
+    font-weight: 500;
+    font-size: 12px;
+    padding: 0px 25px;
+    background-color: white;
+   
+  }
+
+  .form input:nth-child(1){
+    padding: 0px 5px;
+    margin:0 10px
+  }
+}
+
 
 
 @media screen and (max-width: 770px) {
   .logo h3 {
     font-size: small;
     top: 150px;
-    left: 39%;
+    left: 38%;
     position: absolute;
     color: white;
     font-family: NotoSansPahawhHmong;
@@ -711,8 +776,36 @@ svg{
     grid-template-columns: 1fr;
     text-align: center;
   }
+
+  .thirdFootOne{
+    
+    grid-template-columns: 1fr ;
+    text-align: center;
+    
+  }
+
+  .fourthFoot{
+    grid-template-columns: 1fr;
+    grid-auto-flow: initial; 
+    display: flex;
+    flex-direction: column-reverse;
+    
+  }
+
+  .fourthFoot ul{
+    text-align: center;
+    margin: auto;
+    justify-content: center;
+    padding: 10px;
+  }
+   
+  .fourthFoot ul li{
+    padding: 20px;
+  }
+  
   
 }
+
 
 
 
@@ -748,5 +841,30 @@ svg{
   .col1 div{
     margin-bottom: 50px;
   }
+
+  .thirdFoot{
+    grid-template-columns:1fr  ;
+    display: flex;
+    grid-auto-flow: initial; 
+    display: flex;
+    flex-direction: column-reverse;
+
+  
+  }
+
+  .thirdFootOne{
+    margin-top: 150px;
+  }
+
+  
+
+  .thirdFootTwo{
+    
+   
+    
+    justify-content: center;
+    margin: auto;
+  }
+
  
 }
